# x64dbg_mcp

./: .gitignore  LICENSE  PROMOTION.md  README.md  build.ps1  gen_go.py  install.ps1
docs/: REFERENCE.md
plugin/: CMakeLists.txt  build.bat  ewdk.cmake  fetch-sdk.ps1
plugin/src/: plugin.def  plugin_main.cpp  plugin_main.h
plugin/src/bridge/: c_bridge_executor.cpp  c_bridge_executor.h
plugin/src/handlers/: analysis_handler.cpp  annotation_handler.cpp  antidebug_handler.cpp  breakpoint_handler.cpp  command_handler.cpp  controlflow_handler.cpp  debug_handler.cpp  disasm_handler.cpp  dumping_handler.cpp  exceptions_handler.cpp  handles_handler.cpp  memmap_handler.cpp  memory_handler.cpp  module_handler.cpp  patch_handler.cpp  process_handler.cpp  register_handler.cpp  search_handler.cpp  stack_handler.cpp  symbol_handler.cpp  thread_handler.cpp  tracing_handler.cpp
plugin/src/http/: c_http_router.cpp  c_http_router.h  c_http_server.cpp  c_http_server.h  s_http_request.h  s_http_response.h
plugin/src/resources/: plugin_icon.h
plugin/src/ui/: about_dialog.cpp  about_dialog.h  settings_dialog.cpp  settings_dialog.h
plugin/src/util/: format_utils.cpp  format_utils.h  trace_state.h
server/: README.md  package-lock.json  package.json  server.json
server/src/: config.ts  http_client.ts  index.ts
server/src/tools/: analysis.ts  antidebug.ts  breakpoints.ts  command.ts  controlflow.ts  debug.ts  disassembly.ts  dumping.ts  exceptions.ts  handles.ts  index.ts  memory.ts  modules.ts  patches.ts  process.ts  registers.ts  search.ts  stack.ts  symbols.ts  threads.ts  tracing.ts
servergo/: api_address_convert.go  api_analysis.go  api_antidebug.go  api_breakpoints.go  api_command.go  api_controlflow.go  api_database.go  api_debug.go  api_disassembly.go  api_dumping.go  api_exceptions.go  api_handles.go  api_health.go  api_memory.go  api_modules.go  api_patches.go  api_process.go  api_registers.go  api_search.go  api_stack.go  api_symbols.go  api_threads.go  api_tracing.go  client.go  client_test.go  go.mod  main_module_entry_test.go  request.go  types.go
